src/main/gen/language/parser/SparqlParser.java
// This is a generated file. Not intended for manual editing.
package language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static language.psi.SparqlTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class SparqlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return Root(b, l + 1);
  }

  /* ********************************************************** */
  // KW_ADD KW_SILENT? GraphOrDefault KW_TO GraphOrDefault
  public static boolean Add(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Add")) return false;
    if (!nextTokenIs(b, KW_ADD)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ADD, null);
    r = consumeToken(b, KW_ADD);
    p = r; // pin = 1
    r = r && report_error_(b, Add_1(b, l + 1));
    r = p && report_error_(b, GraphOrDefault(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, KW_TO)) && r;
    r = p && GraphOrDefault(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // KW_SILENT?
  private static boolean Add_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Add_1")) return false;
    consumeToken(b, KW_SILENT);
    return true;
  }

  /* ********************************************************** */
  // MultiplicativeExpression ( OP_PLUS MultiplicativeExpression | OP_MINUS MultiplicativeExpression | ( NumericLiteralPositive | NumericLiteralNegative ) ( ( OP_MULT UnaryExpression ) | ( OP_DIV UnaryExpression ) )* )*
  public static boolean AdditiveExpression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpression")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITIVE_EXPRESSION, "<additive expression>");
    r = MultiplicativeExpression(b, l + 1);
    r = r && AdditiveExpression_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ( OP_PLUS MultiplicativeExpression | OP_MINUS MultiplicativeExpression | ( NumericLiteralPositive | NumericLiteralNegative ) ( ( OP_MULT UnaryExpression ) | ( OP_DIV UnaryExpression ) )* )*
  private static boolean AdditiveExpression_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpression_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AdditiveExpression_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AdditiveExpression_1", c)) break;
    }
    return true;
  }

  // OP_PLUS MultiplicativeExpression | OP_MINUS MultiplicativeExpression | ( NumericLiteralPositive | NumericLiteralNegative ) ( ( OP_MULT UnaryExpression ) | ( OP_DIV UnaryExpression ) )*
  private static boolean AdditiveExpression_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpression_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AdditiveExpression_1_0_0(b, l + 1);
    if (!r) r = AdditiveExpression_1_0_1(b, l + 1);
    if (!r) r = AdditiveExpression_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // OP_PLUS MultiplicativeExpression
  private static boolean AdditiveExpression_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpression_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_PLUS);
    r = r && MultiplicativeExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // OP_MINUS MultiplicativeExpression
  private static boolean AdditiveExpression_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpression_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_MINUS);
    r = r && MultiplicativeExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( NumericLiteralPositive | NumericLiteralNegative ) ( ( OP_MULT UnaryExpression ) | ( OP_DIV UnaryExpression ) )*
  private static boolean AdditiveExpression_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpression_1_0_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AdditiveExpression_1_0_2_0(b, l + 1);
    r = r && AdditiveExpression_1_0_2_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // NumericLiteralPositive | NumericLiteralNegative
  private static boolean AdditiveExpression_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpression_1_0_2_0")) return false;
    boolean r;
    r = NumericLiteralPositive(b, l + 1);
    if (!r) r = NumericLiteralNegative(b, l + 1);
    return r;
  }

  // ( ( OP_MULT UnaryExpression ) | ( OP_DIV UnaryExpression ) )*
  private static boolean AdditiveExpression_1_0_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpression_1_0_2_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AdditiveExpression_1_0_2_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AdditiveExpression_1_0_2_1", c)) break;
    }
    return true;
  }

  // ( OP_MULT UnaryExpression ) | ( OP_DIV UnaryExpression )
  private static boolean AdditiveExpression_1_0_2_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpression_1_0_2_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AdditiveExpression_1_0_2_1_0_0(b, l + 1);
    if (!r) r = AdditiveExpression_1_0_2_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // OP_MULT UnaryExpression
  private static boolean AdditiveExpression_1_0_2_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpression_1_0_2_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_MULT);
    r = r && UnaryExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // OP_DIV UnaryExpression
  private static boolean AdditiveExpression_1_0_2_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditiveExpression_1_0_2_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OP_DIV);
    r = r && UnaryExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // KW_COUNT OP_LROUND KW_DISTINCT? ( OP_MULT | Expression ) OP_RROUND
  // | KW_SUM OP_LROUND KW_DISTINCT? Expression OP_RROUND
  // | KW_MIN OP_LROUND KW_DISTINCT? Expression OP_RROUND
  // | KW_MAX OP_LROUND KW_DISTINCT? Expression OP_RROUND
  // | KW_AVG OP_LROUND KW_DISTINCT? Expression OP_RROUND
  // | KW_SAMPLE OP_LROUND KW_DISTINCT? Expression OP_RROUND
  // | KW_GROUP_CONCAT OP_LROUND KW_DISTINCT? Expression ( OP_SEMI KW_SEPARATOR OP_EQ String )? OP_RROUND
  public static boolean Aggregate(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AGGREGATE, "<aggregate>");
    r = Aggregate_0(b, l + 1);
    if (!r) r = Aggregate_1(b, l + 1);
    if (!r) r = Aggregate_2(b, l + 1);
    if (!r) r = Aggregate_3(b, l + 1);
    if (!r) r = Aggregate_4(b, l + 1);
    if (!r) r = Aggregate_5(b, l + 1);
    if (!r) r = Aggregate_6(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // KW_COUNT OP_LROUND KW_DISTINCT? ( OP_MULT | Expression ) OP_RROUND
  private static boolean Aggregate_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_COUNT, OP_LROUND);
    r = r && Aggregate_0_2(b, l + 1);
    r = r && Aggregate_0_3(b, l + 1);
    r = r && consumeToken(b, OP_RROUND);
    exit_section_(b, m, null, r);
    return r;
  }

  // KW_DISTINCT?
  private static boolean Aggregate_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_0_2")) return false;
    consumeToken(b, KW_DISTINCT);
    return true;
  }

  // OP_MULT | Expression
  private static boolean Aggregate_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_0_3")) return false;
    boolean r;
    r = consumeToken(b, OP_MULT);
    if (!r) r = Expression(b, l + 1);
    return r;
  }

  // KW_SUM OP_LROUND KW_DISTINCT? Expression OP_RROUND
  private static boolean Aggregate_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_SUM, OP_LROUND);
    r = r && Aggregate_1_2(b, l + 1);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, OP_RROUND);
    exit_section_(b, m, null, r);
    return r;
  }

  // KW_DISTINCT?
  private static boolean Aggregate_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_1_2")) return false;
    consumeToken(b, KW_DISTINCT);
    return true;
  }

  // KW_MIN OP_LROUND KW_DISTINCT? Expression OP_RROUND
  private static boolean Aggregate_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_MIN, OP_LROUND);
    r = r && Aggregate_2_2(b, l + 1);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, OP_RROUND);
    exit_section_(b, m, null, r);
    return r;
  }

  // KW_DISTINCT?
  private static boolean Aggregate_2_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_2_2")) return false;
    consumeToken(b, KW_DISTINCT);
    return true;
  }

  // KW_MAX OP_LROUND KW_DISTINCT? Expression OP_RROUND
  private static boolean Aggregate_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_MAX, OP_LROUND);
    r = r && Aggregate_3_2(b, l + 1);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, OP_RROUND);
    exit_section_(b, m, null, r);
    return r;
  }

  // KW_DISTINCT?
  private static boolean Aggregate_3_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_3_2")) return false;
    consumeToken(b, KW_DISTINCT);
    return true;
  }

  // KW_AVG OP_LROUND KW_DISTINCT? Expression OP_RROUND
  private static boolean Aggregate_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_4")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_AVG, OP_LROUND);
    r = r && Aggregate_4_2(b, l + 1);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, OP_RROUND);
    exit_section_(b, m, null, r);
    return r;
  }

  // KW_DISTINCT?
  private static boolean Aggregate_4_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_4_2")) return false;
    consumeToken(b, KW_DISTINCT);
    return true;
  }

  // KW_SAMPLE OP_LROUND KW_DISTINCT? Expression OP_RROUND
  private static boolean Aggregate_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_SAMPLE, OP_LROUND);
    r = r && Aggregate_5_2(b, l + 1);
    r = r && Expression(b, l + 1);
    r = r && consumeToken(b, OP_RROUND);
    exit_section_(b, m, null, r);
    return r;
  }

  // KW_DISTINCT?
  private static boolean Aggregate_5_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_5_2")) return false;
    consumeToken(b, KW_DISTINCT);
    return true;
  }

  // KW_GROUP_CONCAT OP_LROUND KW_DISTINCT? Expression ( OP_SEMI KW_SEPARATOR OP_EQ String )? OP_RROUND
  private static boolean Aggregate_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_6")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_GROUP_CONCAT, OP_LROUND);
    r = r && Aggregate_6_2(b, l + 1);
    r = r && Expression(b, l + 1);
    r = r && Aggregate_6_4(b, l + 1);
    r = r && consumeToken(b, OP_RROUND);
    exit_section_(b, m, null, r);
    return r;
  }

  // KW_DISTINCT?
  private static boolean Aggregate_6_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_6_2")) return false;
    consumeToken(b, KW_DISTINCT);
    return true;
  }

  // ( OP_SEMI KW_SEPARATOR OP_EQ String )?
  private static boolean Aggregate_6_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Aggregate_6_4")) return false;
    Aggregate_6_4_0(b, l + 1);
    return true;
  }
